# external-server-integration-tests

./: .gitignore  .gitmodules  LICENSE  README.md  docker-compose.yaml  dummy.py  requirements.txt
config/: config.json  logging.json
config/external-server/: config.json  config_2_cars.json  logging.json
config/http-api/: config.json
config/module-gateway/: config.json
config/tests/: config.json  empty_config.json
db/: insert_test_api_key.sh
lib/test-module/: .gitignore  .gitmodules  CMakeLists.txt
lib/test-module/cmake/: Dependencies.cmake
lib/test-module/include/common/: test_module.hpp
lib/test-module/python_client/: README.md  buttons.yaml  requirements.txt  run_buttons.py
lib/test-module/python_client/button_logic/: ButtonLogic.py  __init__.py
lib/test-module/source/common/: device_management.cpp  memory_management.cpp
lib/test-module/source/external_server/: external_server.cpp
lib/test-module/source/module_gateway/: module_manager.cpp
scripts/: rebuild-example-module.sh
tests/: __main__.py  api_client.py  test_.py  test_connect_sequence.py  test_new_device_after_connect_sequence.py  test_new_device_connection.py  test_successful_connect_sequence.py  utils.py
tests/_utils/: api_client_mock.py  docker.py  external_client.py  messages.py  misc.py  mocks.py
tests/_utils/broker/: __init__.py  mqtt_test_broker.py
tests/_utils/modules/mission_module/: MissionModule_pb2.py  MissionModule_pb2.pyi
tests/autonomy_messages/: MissionModule_pb2.py
tests/broker/: __main__.py  mqtt_test_broker.py
tests/connect_sequence/: test_connect_sequence.py  test_timeouts.py  test_unsupported_devices.py
tests/connection_outage/: test_external_connection.py
tests/multiple_cars/: test_connect_sequence.py
tests/multiple_cars/connect_sequence/: test_connect_sequence.py
tests/multiple_cars/normal_communication/: test_normal_communication.py
tests/normal_communication/: test_communication.py  test_device_disconnection.py  test_message_order.py  test_new_device.py  test_normal_communication.py  test_status_error.py  test_timeouts.py
tests/single_car/connect_sequence/: test_connect_sequence.py  test_timeouts.py  test_unsupported_devices.py
tests/single_car/connection_outage/: test_external_connection.py
tests/single_car/normal_communication/: test_communication.py  test_device_disconnection.py  test_message_order.py  test_new_device.py  test_status_error.py  test_timeouts.py
tests/utils/: mocks.py
tests/utils/modules/mission_module/: MissionModule_pb2.pyi
